--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina Adi</h5></a>   <!-- ADD LOGO -->
+		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   <!-- ADD LOGO -->
 		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -41,10 +41,10 @@
 					<a class="nav-link" href="#">Home</a>
 				</li> 
 				<li class="nav-item">
-					<a class="nav-link" href="#">Visited Destinations</a>
+					<a class="nav-link" href="visited_destinations.html">Visited Destinations</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#">Dream Destinations</a>
+					<a class="nav-link" href="dream_destinations.html">Dream Destinations</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#contact">Contact</a>
@@ -54,14 +54,54 @@
 	
 	</div>
 	</nav>
-	<h1>Travel With Me</h1>
+	<div class = "header-text">
+		<h2>Pictures too beautiful to remain on a camera roll!</h2>
+		<br>
+		<h1>Travel With Me</h1>
+	</div>
+</div>
+<!-- END header -->
+
+
+<!-- Album Container -->
+<div class="album-container">
+	<div class="row">
+		<div class="col-sm-4">
+			<img src="../images/visited_destinations/mexico1.jpg" alt = "Cuba" style="width:300px;height:200px">
+			<div class ="row">
+				<div class ="col-sm-4"></div>
+				<div class ="col-sm-8"></div>
+				<p>Album No.1</p>
+				<br>
+				<h5>Cayo Coco, Cuba</h5>
+			</div>	
+
+		</div>
+		<div class="col-sm-4">
+			<img src="../images/visited_destinations/mexico8.jpg" alt = "Mexico" style="width:300px;height:200px">
+		</div>
+		<div class="col-sm-4">
+			<img src="../images/visited_destinations/mexico9.jpg" alt = "Canada" style="width:300px;height:200px">
+		</div>
+	</div>
+
+</div>
+<!-- END Album Container -->
+
+
+
+<!--intro container -->
+<div class="intro-container">
+	<div class="text-container">
+		<h3>Hello There!</h3>
+		<br>
+		<p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.</p>
+	</div>
+
 </div>
 
 
-<!-- -->
-
-
-<!-- -->
+<!-- END intro container -->
 
 
 
