Adding carousel code and setting up visited destination page

--- a/html/dream_destinations.html
+++ b/html/dream_destinations.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>TravelWithMe</title>
+	<title>Dream Destinations</title>
 
 
 	<!-- Bootstrap-->
@@ -31,7 +31,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   <!-- ADD LOGO -->
+		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
 		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -55,14 +55,45 @@
 	</div>
 	</nav>
 	<div class = "header-text">
-		<h2>Pictures too beautiful to remain on a camera roll!</h2>
-		<br>
-		<h1>Travel With Me</h1>
+		<h1>Dream Destinations</h1>
 	</div>
 </div>
 <!-- END header -->
 
+<!-- Section for all destination pictures  --> 
 
+<div class="content-container">
+
+	<!-- Carousel code (HERE ARE TWO, think you have to customize for each carousel, use arrows, jquery), find out how to do 2 on one page  --> 
+	<div id ="slides" class="carousel slide" data-ride="carousel">
+	<ul class="carousel-indicators">
+		<li data-target="#slides" data-slide-to="0" class="active"></li>
+		<li data-target="#slides" data-slide-to="1"></li>
+		<li data-target="#slides" data-slide-to="2"></li>
+	</ul>
+	<div class="carousel-inner">
+		<div class ="carousel-item active"><img src ="../images/dream_destinations/argentina1.jpg"></div>
+		<div class ="carousel-item"><img src ="../images/dream_destinations/argentina2.jpg"></div>
+		<div class ="carousel-item"><img src ="../images/dream_destinations/japan1.jpg"></div>
+	</div>
+	</div>
+
+
+	<div id ="slides" class="carousel slide" data-ride="carousel">
+	<ul class="carousel-indicators">
+		<li data-target="#slides" data-slide-to="0" class="active"></li>
+		<li data-target="#slides" data-slide-to="1"></li>
+		<li data-target="#slides" data-slide-to="2"></li>
+	</ul>
+	<div class="carousel-inner">
+		<div class ="carousel-item active"><img src ="../images/dream_destinations/greece1.jpg"></div>
+		<div class ="carousel-item"><img src ="../images/dream_destinations/greece2.jpg"></div>
+		<div class ="carousel-item"><img src ="../images/dream_destinations/greece3.jpg"></div>
+	</div>
+	</div>
+
+
+</div>
 
 
 
