--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   <!-- ADD LOGO -->
+		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
 		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -68,7 +68,7 @@
 	<div class="row">
 		<div class="col-sm-4">
 			<img src="../images/visited_destinations/mexico1.jpg" alt = "Cuba" style="width:300px;height:200px">
-			<div class ="row">
+			<div class ="row">       <!-- FIX HERE -->
 				<div class ="col-sm-4"></div>
 				<div class ="col-sm-8"></div>
 				<p>Album No.1</p>
@@ -79,9 +79,24 @@
 		</div>
 		<div class="col-sm-4">
 			<img src="../images/visited_destinations/mexico8.jpg" alt = "Mexico" style="width:300px;height:200px">
+			<div class ="row">     <!-- FIX HERE -->
+				<div class ="col-sm-4"></div>
+				<div class ="col-sm-8"></div>
+				<p>Album No.2</p>
+				<br>
+				<h5>Nuevo Vallarta, Mexico</h5>
+			</div>
+
 		</div>
 		<div class="col-sm-4">
 			<img src="../images/visited_destinations/mexico9.jpg" alt = "Canada" style="width:300px;height:200px">
+			<div class ="row">     <!-- FIX HERE -->
+				<div class ="col-sm-4"></div>
+				<div class ="col-sm-8"></div>
+				<p>Album No.3</p>
+				<br>
+				<h5>Canada(Home)</h5>
+			</div>
 		</div>
 	</div>
 
