--- a/html/visited_destinations.html
+++ b/html/visited_destinations.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>TravelWithMe</title>
+	<title>Visited Destinations</title>
 
 
 	<!-- Bootstrap-->
@@ -25,24 +25,55 @@
 </head>
 
 
-<body>
+<div class="background">
+	<body data-spy="scroll" data target="#navbarResponsive"> <!-- data-spy="scroll" data target="#navbarResponsive" This is to keep the header as we keep scrolling --> 
+
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-md">  
+	<div class="container-fluid">
+		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
+		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class ="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home</a>
+				</li> 
+				<li class="nav-item">
+					<a class="nav-link" href="visited_destinations.html">Visited Destinations</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="dream_destinations.html">Dream Destinations</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#contact">Contact</a>
+				</li>
+			</ul>
+		</div>
+	
+	</div>
+	</nav>
+	<div class = "header-text">
+		<h1>Visited Destinations</h1>
+	</div>
+</div>
+<!-- END header -->
 
 
 
-	<img src = "images/.jpg">
-	<img src = "images/.jpg">
-	<img src = "images/.jpg">
-	<img src = "images/.jpg">
-	<img src = "images/.jpg">
-	<img src = "images/.jpg">
-	<img src = "images/.jpg">
-	<img src = "images/.jpg">
-	<img src = "images/.jpg">
 
+
+
+
+
+
+<!-- Footer -->
+<footer class>
+	<!-- Copyright --> 
+	<div class="footer-copyright text-center py-3"> ©2020 by Zeina Adi. </div>
+
+</footer>
 
 </body>
-
-
-
-
 </html>
