Adding dream dest. pictures to file with styling

--- a/html/dream_destinations.html
+++ b/html/dream_destinations.html
@@ -63,34 +63,49 @@
 <!-- Section for all destination pictures  --> 
 
 <div class="content-container">
-
-	<!-- Carousel code (HERE ARE TWO, think you have to customize for each carousel, use arrows, jquery), find out how to do 2 on one page  --> 
-	<div id ="slides" class="carousel slide" data-ride="carousel">
-	<ul class="carousel-indicators">
-		<li data-target="#slides" data-slide-to="0" class="active"></li>
-		<li data-target="#slides" data-slide-to="1"></li>
-		<li data-target="#slides" data-slide-to="2"></li>
-	</ul>
-	<div class="carousel-inner">
-		<div class ="carousel-item active"><img src ="../images/dream_destinations/argentina1.jpg"></div>
-		<div class ="carousel-item"><img src ="../images/dream_destinations/argentina2.jpg"></div>
-		<div class ="carousel-item"><img src ="../images/dream_destinations/japan1.jpg"></div>
-	</div>
+	<h4> Istanbul, Turkey </h4>
+	<div class="row">
+		<div class="col-sm-6"><img src="../images/dream_destinations/turkey1.jpg" alt = "Turkey 1"></div>
+		<div class="col-sm-6"><img src="../images/dream_destinations/turkey2.jpg" alt = "Turkey 2"></div>
 	</div>
 
+	<h4> Cape Town, South Africa </h4>
+	<div class="row">
+		<div class="col-sm-6"><img src="../images/dream_destinations/southafrica1.jpg" alt = "South Africa 1"></div>
+		<div class="col-sm-6"><img src="../images/dream_destinations/southafrica2.jpg" alt = "South Africa Cape Town 2"></div>
+	</div>
 
-	<div id ="slides" class="carousel slide" data-ride="carousel">
-	<ul class="carousel-indicators">
-		<li data-target="#slides" data-slide-to="0" class="active"></li>
-		<li data-target="#slides" data-slide-to="1"></li>
-		<li data-target="#slides" data-slide-to="2"></li>
-	</ul>
-	<div class="carousel-inner">
-		<div class ="carousel-item active"><img src ="../images/dream_destinations/greece1.jpg"></div>
-		<div class ="carousel-item"><img src ="../images/dream_destinations/greece2.jpg"></div>
-		<div class ="carousel-item"><img src ="../images/dream_destinations/greece3.jpg"></div>
+	<h4> Greece </h4>
+	<div class="row">
+		<div class="col-sm-6"><img src="../images/dream_destinations/greece1.jpg" alt = "Greece 1"></div>
+		<div class="col-sm-6"><<img src="../images/dream_destinations/greece2.jpg" alt = "Greece 2"></div>
 	</div>
+
+	<h4> Japan </h4>
+	<div class="row">
+		<div class="col-sm-6"><img src="../images/dream_destinations/japan1.jpg" alt = "Japan 1"></div>
+		<div class="col-sm-6"><img src="../images/dream_destinations/japan2.jpg" alt = "Japan 2"></div>
 	</div>
+
+	<h4> Ireland </h4>
+	<div class="row">
+		<div class="col-sm-6"><img src="../images/dream_destinations/ireland1.jpg" alt = "Ireland 1"></div>
+		<div class="col-sm-6"><img src="../images/dream_destinations/ireland2.jpg" alt = "Ireland 2"></div>
+	</div>
+
+	<h4> Maldives </h4>
+	<div class="row">
+		<div class="col-sm-6"><img src="../images/dream_destinations/maldives1.jpg" alt = "Maldives 1"></div>
+		<div class="col-sm-6"><img src="../images/dream_destinations/maldives2.jpg" alt = "Maldives 2"></div>
+	</div>
+
+	<h4> Portugal </h4>
+	<div class="row">
+		<div class="col-sm-6"><img src="../images/dream_destinations/portugal1.jpg" alt = "Portugal 1"></div>
+		<div class="col-sm-6"><img src="../images/dream_destinations/portugal2.jpg" alt = "Portugal 2"></div>
+	</div>
+
+
 
 
 </div>
