Adding contact section content

--- a/html/dream_destinations.html
+++ b/html/dream_destinations.html
@@ -38,13 +38,13 @@
 		<div class ="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home</a>
+					<a class="nav-link" href="home.html">Home</a>
 				</li> 
 				<li class="nav-item">
 					<a class="nav-link" href="visited_destinations.html">Visited Destinations</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="dream_destinations.html">Dream Destinations</a>
+					<a class="nav-link" href="#">Dream Destinations</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#contact">Contact</a>
