--- a/html/index.html
+++ b/html/index.html
@@ -114,12 +114,56 @@
 	</div>
 
 </div>
-
-
 <!-- END intro container -->
 
 
+<!-- Railway picture (MAKE ANIMATED)-->
+<div class="full-width-container"></div>
+<!-- END Railway picture-->
 
+
+<!-- CONTACT FORM -->
+<div class="content-container">
+	<div class="row">
+		<div class="col-sm-4">
+			<h3 class="ctact">Contact</h3>
+			<h5 class="ctact">Zeina Adi</h5>
+			<p class="ctact"> -</p>
+
+				<i class="fa fa-instagram" aria-hidden="true"></i><p class="ctact">zeinaadi</p>
+				
+				<i class="fa fa-facebook" aria-hidden="true"></i><p class="ctact">Zeina Adi</p>
+		</div>
+		<div class="col-sm-8">
+		<div class="container">
+		    <form action="action_page.php">
+
+		    <label for="fname"></label>
+		    <input type="text" id="fname" name="name" placeholder="Name">
+		    <br>
+
+		    <label for="email"></label>
+		    <input type="text" id="email" name="email" placeholder="Email">
+		    <br>
+
+		    <label for="country"></label>
+		    <input type="text" id="subject" name="subject" placeholder="Subject">
+		    <br>
+		    
+		    <label for="s"></label>
+		    <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
+		    <br>
+
+		    <input type="submit" value="Submit">
+
+		    </form>
+		</div>
+	</div>
+	</div>
+</div>
+
+
+<!-- END CONTACT FORM -->
 
 
 
