--- a/html/visited_destinations.html
+++ b/html/visited_destinations.html
@@ -38,10 +38,10 @@
 		<div class ="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home</a>
+					<a class="nav-link" href="index.html">Home</a>
 				</li> 
 				<li class="nav-item">
-					<a class="nav-link" href="visited_destinations.html">Visited Destinations</a>
+					<a class="nav-link" href="#">Visited Destinations</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="dream_destinations.html">Dream Destinations</a>
@@ -61,7 +61,21 @@
 <!-- END header -->
 
 
+<!-- content container -->
 
+<div class="content-container">
+	<h4>Cayo Coco, Cuba</h4>
+	<img src="../images/visited_destinations/cuba1.jpg">
+	<h4>Nuevo Vallarta, Mexico</h4>
+	<img src="../images/visited_destinations/mexico1.jpg">
+	<h4>Canada</h4>
+	<img src="../images/visited_destinations/canada1.jpg">
+</div>
+
+
+
+
+<!-- END content container -->
 
 
 
