Adding contact form to each page, adding gallery feature

--- a/html/canada.html
+++ b/html/canada.html
@@ -31,14 +31,14 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
+		<a class="navbar-brand" href="#"><i class="fa fa-camera-retro" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
 		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class ="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home</a>
+					<a class="nav-link" href="index.html">Home</a>
 				</li> 
 				<li class="nav-item">
 					<a class="nav-link" href="visited_destinations.html">Visited Destinations</a>
@@ -60,8 +60,7 @@
 </div>
 <!-- END header -->
 
-
-
+<center><img src="..\images\under-construction.png" style="width:800px;height:500px;"></center>
 
 <!-- picture gallery -->
 
