--- a/html/dream_destinations.html
+++ b/html/dream_destinations.html
@@ -31,14 +31,14 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
+		<a class="navbar-brand" href="#"><i class="fa fa-camera-retro" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
 		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class ="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="home.html">Home</a>
+					<a class="nav-link" href="index.html">Home</a>
 				</li> 
 				<li class="nav-item">
 					<a class="nav-link" href="visited_destinations.html">Visited Destinations</a>
@@ -63,55 +63,106 @@
 <!-- Section for all destination pictures  --> 
 
 <div class="content-container">
-	<h4> Istanbul, Turkey </h4>
-	<div class="row">
-		<div class="col-sm-6"><img src="../images/dream_destinations/turkey1.jpg" alt = "Turkey 1"></div>
-		<div class="col-sm-6"><img src="../images/dream_destinations/turkey2.jpg" alt = "Turkey 2"></div>
+	<div class="destination-container">
+		<h4> Istanbul, Turkey </h4>
+		<div class="row">
+			<div class="col-sm-6"><img src="../images/dream_destinations/turkey1.jpg" alt = "Turkey 1"></div>
+			<div class="col-sm-6"><img src="../images/dream_destinations/turkey2.jpg" alt = "Turkey 2"></div>
+		</div>
 	</div>
 
-	<h4> Cape Town, South Africa </h4>
-	<div class="row">
-		<div class="col-sm-6"><img src="../images/dream_destinations/southafrica1.jpg" alt = "South Africa 1"></div>
-		<div class="col-sm-6"><img src="../images/dream_destinations/southafrica2.jpg" alt = "South Africa Cape Town 2"></div>
+	<div class="destination-container">
+		<h4> Cape Town, South Africa </h4>
+		<div class="row">
+			<div class="col-sm-6"><img src="../images/dream_destinations/southafrica1.jpg" alt = "South Africa 1"></div>
+			<div class="col-sm-6"><img src="../images/dream_destinations/southafrica2.jpg" alt = "South Africa Cape Town 2"></div>
+		</div>
 	</div>
 
-	<h4> Greece </h4>
-	<div class="row">
-		<div class="col-sm-6"><img src="../images/dream_destinations/greece1.jpg" alt = "Greece 1"></div>
-		<div class="col-sm-6"><<img src="../images/dream_destinations/greece2.jpg" alt = "Greece 2"></div>
+	<div class="destination-container">
+		<h4> Greece </h4>
+		<div class="row">
+			<div class="col-sm-6"><img src="../images/dream_destinations/greece1.jpg" alt = "Greece 1"></div>
+			<div class="col-sm-6"><img src="../images/dream_destinations/greece2.jpg" alt = "Greece 2"></div>
+		</div>
 	</div>
 
-	<h4> Japan </h4>
-	<div class="row">
-		<div class="col-sm-6"><img src="../images/dream_destinations/japan1.jpg" alt = "Japan 1"></div>
-		<div class="col-sm-6"><img src="../images/dream_destinations/japan2.jpg" alt = "Japan 2"></div>
+	<div class="destination-container">
+		<h4> Japan </h4>
+		<div class="row">
+			<div class="col-sm-6"><img src="../images/dream_destinations/japan1.jpg" alt = "Japan 1"></div>
+			<div class="col-sm-6"><img src="../images/dream_destinations/japan2.jpg" alt = "Japan 2"></div>
+		</div>
 	</div>
 
-	<h4> Ireland </h4>
-	<div class="row">
-		<div class="col-sm-6"><img src="../images/dream_destinations/ireland1.jpg" alt = "Ireland 1"></div>
-		<div class="col-sm-6"><img src="../images/dream_destinations/ireland2.jpg" alt = "Ireland 2"></div>
+	<div class="destination-container">
+		<h4> Ireland </h4>
+		<div class="row">
+			<div class="col-sm-6"><img src="../images/dream_destinations/ireland1.jpg" alt = "Ireland 1"></div>
+
+			<div class="col-sm-6"><img src="../images/dream_destinations/ireland2.jpg" alt = "Ireland 2"></div>
+		</div>
 	</div>
 
-	<h4> Maldives </h4>
-	<div class="row">
-		<div class="col-sm-6"><img src="../images/dream_destinations/maldives1.jpg" alt = "Maldives 1"></div>
-		<div class="col-sm-6"><img src="../images/dream_destinations/maldives2.jpg" alt = "Maldives 2"></div>
+	<div class="destination-container">
+		<h4> Maldives </h4>
+		<div class="row">
+			<div class="col-sm-6"><img src="../images/dream_destinations/maldives1.jpg" alt = "Maldives 1"></div>
+			<div class="col-sm-6"><img src="../images/dream_destinations/maldives2.jpg" alt = "Maldives 2"></div>
+		</div>
 	</div>
 
-	<h4> Portugal </h4>
-	<div class="row">
-		<div class="col-sm-6"><img src="../images/dream_destinations/portugal1.jpg" alt = "Portugal 1"></div>
-		<div class="col-sm-6"><img src="../images/dream_destinations/portugal2.jpg" alt = "Portugal 2"></div>
+	<div class="destination-container">
+		<h4> Portugal </h4>
+		<div class="row">
+			<div class="col-sm-6"><img src="../images/dream_destinations/portugal1.jpg" alt = "Portugal 1"></div>
+			<div class="col-sm-6"><img src="../images/dream_destinations/portugal2.jpg" alt = "Portugal 2"></div>
+		</div>
 	</div>
-
-
-
-
 </div>
 
+<!--End section dream destination places -->
 
+<!-- CONTACT FORM -->
+<div class="content-container">
+	<div class="row">
+		<div class="col-sm-4">
+			<h3 class="ctact">Contact</h3>
+			<h5 class="ctact">Zeina Adi</h5>
+			<p class="ctact"> -</p>
 
+				<a href="#"><i class="fab fa-instagram"></i><p class="ctact">zeinaadi</p></a>
+				
+				<a href="#"><i class="fab fa-facebook-f"></i><p class="ctact">Zeina Adi</p></a>
+		</div>
+		<div class="col-sm-8">
+		<div class="container">
+		    <form action="action_page.php">
+
+		    <label for="fname"></label>
+		    <input type="text" id="fname" name="name" placeholder="Name">
+		    <br>
+
+		    <label for="email"></label>
+		    <input type="text" id="email" name="email" placeholder="Email">
+		    <br>
+
+		    <label for="country"></label>
+		    <input type="text" id="subject" name="subject" placeholder="Subject">
+		    <br>
+		    
+		    <label for="s"></label>
+		    <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
+		    <br>
+
+		    <input type="submit" value="Submit">
+
+		    </form>
+		</div>
+	</div>
+	</div>
+</div>
+<!-- END CONTACT FORM -->
 
 
 
