--- a/html/mexico.html
+++ b/html/mexico.html
@@ -31,14 +31,14 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
+		<a class="navbar-brand" href="#"><i class="fa fa-camera-retro" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
 		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class ="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home</a>
+					<a class="nav-link" href="index.html">Home</a>
 				</li> 
 				<li class="nav-item">
 					<a class="nav-link" href="visited_destinations.html">Visited Destinations</a>
@@ -55,30 +55,79 @@
 	</div>
 	</nav>
 	<div class = "header-text">
-		<h1>Nuevo Vallarta, Mexico</h1>
-		<br>
-		<h2>June, 2018</h2>
+		<h1>Puerto Vallarta, Mexico</h1>
+		<center><h4>June, 2018</h4></center>
 	</div>
 </div>
 <!-- END header -->
 
 
 
-<!-- picture gallery -->
+<!-- Picture gallery -->
 
+<div class="photo-gallery">
+<div class="roww">
+	<div class="column">
 
-<img src="../images/visited_destinations/mexico1.jpg" alt = "Mexico 1">
-<img src="../images/visited_destinations/mexico2.jpg" alt = "Mexico 1">
-<img src="../images/visited_destinations/mexico3.jpg" alt = "Mexico 1">
-<img src="../images/visited_destinations/mexico4.jpg" alt = "Mexico 1">
-<img src="../images/visited_destinations/mexico5.jpg" alt = "Mexico 1">
-<img src="../images/visited_destinations/mexico6.jpg" alt = "Mexico 1">
-<img src="../images/visited_destinations/mexico7.jpg" alt = "Mexico 1">
-<img src="../images/visited_destinations/mexico8.jpg" alt = "Mexico 1">
-<img src="../images/visited_destinations/mexico9.jpg" alt = "Mexico 1">
+	<img src="../images/visited_destinations/mexico1.jpg" alt = "Mexico 1">
+	<img src="../images/visited_destinations/mexico2.jpg" alt = "Mexico 2">
+	<img src="../images/visited_destinations/mexico3.jpg" alt = "Mexico 3">
+	<img src="../images/visited_destinations/mexico4.jpg" alt = "Mexico 4">
+	</div>
 
+	<div class="column">
 
+		<img src="../images/visited_destinations/mexico5.jpg" alt = "Mexico 5">
+		<img src="../images/visited_destinations/mexico6.jpg" alt = "Mexico 6">
+		<img src="../images/visited_destinations/mexico7.jpg" alt = "Mexico 7">
+		<img src="../images/visited_destinations/mexico8.jpg" alt = "Mexico 8">
+		<img src="../images/visited_destinations/mexico9.jpg" alt = "Mexico 9">
+	</div>
+</div>
+</div>
 <!-- END picture gallery -->
+
+<!-- CONTACT FORM -->
+<div class="content-container">
+	<div class="row">
+		<div class="col-sm-4">
+			<h3 class="ctact">Contact</h3>
+			<h5 class="ctact">Zeina Adi</h5>
+			<p class="ctact"> -</p>
+
+				<a href="#"><i class="fab fa-instagram"></i><p class="ctact">zeinaadi</p></a>
+				
+				<a href="#"><i class="fab fa-facebook-f"></i><p class="ctact">Zeina Adi</p></a>
+		</div>
+		<div class="col-sm-8">
+		<div class="container">
+		    <form action="action_page.php">
+
+		    <label for="fname"></label>
+		    <input type="text" id="fname" name="name" placeholder="Name">
+		    <br>
+
+		    <label for="email"></label>
+		    <input type="text" id="email" name="email" placeholder="Email">
+		    <br>
+
+		    <label for="country"></label>
+		    <input type="text" id="subject" name="subject" placeholder="Subject">
+		    <br>
+		    
+		    <label for="s"></label>
+		    <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
+		    <br>
+
+		    <input type="submit" value="Submit">
+
+		    </form>
+		</div>
+	</div>
+	</div>
+</div>
+<!-- END CONTACT FORM -->
+
 
 
 
