--- a/html/visited_destinations.html
+++ b/html/visited_destinations.html
@@ -31,7 +31,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
+		<a class="navbar-brand" href="#"><i class="fa fa-camera-retro" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
 		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -64,19 +64,72 @@
 <!-- content container -->
 
 <div class="content-container">
-	<h4>Cayo Coco, Cuba</h4>
-	<img src="../images/visited_destinations/cuba1.jpg">
-	<h4>Nuevo Vallarta, Mexico</h4>
-	<img src="../images/visited_destinations/mexico1.jpg">
-	<h4>Canada</h4>
-	<img src="../images/visited_destinations/canada1.jpg">
+	<div class="destination-container">
+		<div class= "row"> 
+			<div class ="col-sm-9"><h4>Cayo Coco, Cuba</h4></div>
+			<div class="col-sm-3"><a href ="cuba.html"><i class="fas fa-long-arrow-alt-right"></i></a></div>
+		</div>
+		<a href ="cuba.html"><img src="../images/visited_destinations/cuba7.jpg" style="width:800px;height:400px"></a>
+	</div>
+	
+	<div class="destination-container">
+		<div class= "row"> 
+			<div class ="col-sm-9"><h4>Puerto Vallarta, Mexico</h4></div>
+			<div class="col-sm-3"><a href ="mexico.html"><i class="fas fa-long-arrow-alt-right"></i></a></div>
+		</div>
+		<a href ="mexico.html"><img src="../images/visited_destinations/mexico8.jpg" style="width:800px;height:400px" ></a>
+	</div>
+	<div class="destination-container">
+		<div class= "row"> 
+			<div class ="col-sm-9"><h4>Canada</h4></div>
+			<div class="col-sm-3"><a href ="canada.html"><i class="fas fa-long-arrow-alt-right"></i></a></div>
+		</div>
+		<a href ="canada.html"><img src="../images/visited_destinations/canada2.jpg" style="width:800px;height:400px"></a>
+	</div>
 </div>
-
-
-
-
 <!-- END content container -->
 
+
+<!-- CONTACT FORM -->
+<div class="content-container">
+	<div class="row">
+		<div class="col-sm-4">
+			<h3 class="ctact">Contact</h3>
+			<h5 class="ctact">Zeina Adi</h5>
+			<p class="ctact"> -</p>
+
+				<a href="#"><i class="fab fa-instagram"></i><p class="ctact">zeinaadi</p></a>
+				
+				<a href="#"><i class="fab fa-facebook-f"></i><p class="ctact">Zeina Adi</p></a>
+		</div>
+		<div class="col-sm-8">
+		<div class="container">
+		    <form action="action_page.php">
+
+		    <label for="fname"></label>
+		    <input type="text" id="fname" name="name" placeholder="Name">
+		    <br>
+
+		    <label for="email"></label>
+		    <input type="text" id="email" name="email" placeholder="Email">
+		    <br>
+
+		    <label for="country"></label>
+		    <input type="text" id="subject" name="subject" placeholder="Subject">
+		    <br>
+		    
+		    <label for="s"></label>
+		    <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
+		    <br>
+
+		    <input type="submit" value="Submit">
+
+		    </form>
+		</div>
+	</div>
+	</div>
+</div>
+<!-- END CONTACT FORM -->
 
 
 
