--- a/html/cuba.html
+++ b/html/cuba.html
@@ -31,14 +31,14 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
+		<a class="navbar-brand" href="#"><i class="fa fa-camera-retro" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
 		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class ="collapse navbar-collapse" id="navbarResponsive">
 			<ul class="navbar-nav ml-auto">
 				<li class="nav-item active">
-					<a class="nav-link" href="#">Home</a>
+					<a class="nav-link" href="index.html">Home</a>
 				</li> 
 				<li class="nav-item">
 					<a class="nav-link" href="visited_destinations.html">Visited Destinations</a>
@@ -56,18 +56,80 @@
 	</nav>
 	<div class = "header-text">
 		<h1>Cayo Coco, Cuba</h1>
-		<br>
-		<h2>March, 2017</h2>
+		<center><h4>March, 2017</h4></center>
 	</div>
 </div>
 <!-- END header -->
 
 
+<!-- Photo Gallery Cuba --> 
+<div class="photo-gallery">
+<div class="roww">
+	<div class="column">
 
-<!-- picture gallery -->
+	<img src="../images/visited_destinations/cuba1.jpg" alt = "Cuba 1">
+	<img src="../images/visited_destinations/cuba2.jpg" alt = "Cuba 2">
+	<img src="../images/visited_destinations/cuba3.jpg" alt = "Cuba 3">
+	<img src="../images/visited_destinations/cuba4.jpg" alt = "Cuba 4">
+	</div>
+
+	<div class="column">
+
+		<img src="../images/visited_destinations/cuba5.jpg" alt = "Cuba 5">
+		<img src="../images/visited_destinations/cuba6.jpg" alt = "Cuba 6">
+		<img src="../images/visited_destinations/cuba7.jpg" alt = "Cuba 7">
+	</div>
+</div>
+</div>
 
 
-<!-- END picture gallery -->
+
+<!-- END Photo Gallery Cuba --> 
+
+
+
+
+
+<!-- CONTACT FORM -->
+<div class="content-container">
+	<div class="row">
+		<div class="col-sm-4">
+			<h3 class="ctact">Contact</h3>
+			<h5 class="ctact">Zeina Adi</h5>
+			<p class="ctact"> -</p>
+
+				<a href="#"><i class="fab fa-instagram"></i><p class="ctact">zeinaadi</p></a>
+				
+				<a href="#"><i class="fab fa-facebook-f"></i><p class="ctact">Zeina Adi</p></a>
+		</div>
+		<div class="col-sm-8">
+		<div class="container">
+		    <form action="action_page.php">
+
+		    <label for="fname"></label>
+		    <input type="text" id="fname" name="name" placeholder="Name">
+		    <br>
+
+		    <label for="email"></label>
+		    <input type="text" id="email" name="email" placeholder="Email">
+		    <br>
+
+		    <label for="country"></label>
+		    <input type="text" id="subject" name="subject" placeholder="Subject">
+		    <br>
+		    
+		    <label for="s"></label>
+		    <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
+		    <br>
+
+		    <input type="submit" value="Submit">
+
+		    </form>
+		</div>
+	</div>
+	</div>
+</div>
+<!-- END CONTACT FORM -->
 
 
 <!-- Footer -->
