--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
 	<div class="container-fluid">
-		<a class="navbar-brand" href="#"><i class="fa fa-camera" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
+		<a class="navbar-brand" href="#"><i class="fa fa-camera-retro" aria-hidden="true"></i><h5>Zeina <br> Adi</h5></a>   
 		<button class="navbar-toggler" type ="button" data-toggle="collapse" data-target="#navbarResponsive">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -55,8 +55,6 @@
 	</div>
 	</nav>
 	<div class = "header-text">
-		<h2>Pictures too beautiful to remain on a camera roll!</h2>
-		<br>
 		<h1>Travel With Me</h1>
 	</div>
 </div>
@@ -67,42 +65,28 @@
 <div class="album-container">
 	<div class="row">
 		<div class="col-sm-4">
-			<img src="../images/visited_destinations/mexico1.jpg" alt = "Cuba" style="width:300px;height:200px">
-			<div class ="row">       <!-- FIX HERE -->
-				<div class ="col-sm-4"></div>
-				<div class ="col-sm-8"></div>
-				<p>Album No.1</p>
-				<br>
-				<h5>Cayo Coco, Cuba</h5>
-			</div>	
-
-		</div>
-		<div class="col-sm-4">
-			<img src="../images/visited_destinations/mexico8.jpg" alt = "Mexico" style="width:300px;height:200px">
-			<div class ="row">     <!-- FIX HERE -->
-				<div class ="col-sm-4"></div>
-				<div class ="col-sm-8"></div>
-				<p>Album No.2</p>
-				<br>
-				<h5>Nuevo Vallarta, Mexico</h5>
+			<a href="cuba.html"><img src="../images/visited_destinations/cuba7.jpg" alt = "Cuba" style="width:300px;height:200px"></a>
+			<div class ="subtext">
+				<h5>Album No. 1</h5><h4>Cayo Coco, Cuba</h4>
 			</div>
-
 		</div>
+
 		<div class="col-sm-4">
-			<img src="../images/visited_destinations/mexico9.jpg" alt = "Canada" style="width:300px;height:200px">
-			<div class ="row">     <!-- FIX HERE -->
-				<div class ="col-sm-4"></div>
-				<div class ="col-sm-8"></div>
-				<p>Album No.3</p>
-				<br>
-				<h5>Canada(Home)</h5>
+			<a href="mexico.html"><img src="../images/visited_destinations/mexico8.jpg" alt = "Mexico" style="width:300px;height:200px"></a>
+			<div class= "subtext">   
+				<h5>Album No. 2</h5><h4>Puerto Vallarta, Mexico</h4>
+			</div>
+		</div>
+
+		<div class="col-sm-4">
+			<a href="canada.html"><img src="../images/visited_destinations/canada3.jpg" alt = "Canada" style="width:300px;height:200px"></a>   
+			<div class ="subtext">
+				<h5>Album No. 3</h5><h4> Canada(Home)</h4>
 			</div>
 		</div>
 	</div>
-
 </div>
 <!-- END Album Container -->
-
 
 
 <!--intro container -->
@@ -110,7 +94,10 @@
 	<div class="text-container">
 		<h3>Hello There!</h3>
 		<br>
-		<p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me and you can start adding your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to write more. Tell a story and let your users get to know you.</p>
+		<p>Welcome to my travel gallery! I really think these pictures are too beautiful to remain on my camera roll for 
+		no one to see, so enjoy my viewing my obsession with ocena/seas/beaches and trees. Can't wait to travel the world 
+		and discover more cultures around the world, try different foods and visit historic monuments. My love for history 
+		will take me outside the resorts my parents love so much and I can't wait! </p>
 	</div>
 
 </div>
@@ -130,9 +117,9 @@
 			<h5 class="ctact">Zeina Adi</h5>
 			<p class="ctact"> -</p>
 
-				<i class="fa fa-instagram" aria-hidden="true"></i><p class="ctact">zeinaadi</p>
+				<a href="#"><i class="fab fa-instagram"></i><p class="ctact">zeinaadi</p></a>
 				
-				<i class="fa fa-facebook" aria-hidden="true"></i><p class="ctact">Zeina Adi</p>
+				<a href="#"><i class="fab fa-facebook-f"></i><p class="ctact">Zeina Adi</p></a>
 		</div>
 		<div class="col-sm-8">
 		<div class="container">
