Updating nav functions

--- a/html/cuba.html
+++ b/html/cuba.html
@@ -91,16 +91,16 @@
 
 
 <!-- CONTACT FORM -->
-<div class="content-container">
+<a name="contact"><div class="content-container"></a>
 	<div class="row">
 		<div class="col-sm-4">
 			<h3 class="ctact">Contact</h3>
 			<h5 class="ctact">Zeina Adi</h5>
 			<p class="ctact"> -</p>
 
-				<a href="#"><i class="fab fa-instagram"></i><p class="ctact">zeinaadi</p></a>
+				<a href="https://www.instagram.com/zeinaadi_" target="_blank"><i class="fab fa-instagram"></i><p class="ctact">zeinaadi</p></a>
 				
-				<a href="#"><i class="fab fa-facebook-f"></i><p class="ctact">Zeina Adi</p></a>
+				<a href="https://www.facebook.com/Zeina.Adi.000" target="_blank"><i class="fab fa-facebook-f"></i><p class="ctact">Zeina Adi</p></a>
 		</div>
 		<div class="col-sm-8">
 		<div class="container">
