Removing repetitive code

--- a/html/dream_destinations.html
+++ b/html/dream_destinations.html
@@ -47,7 +47,7 @@
 					<a class="nav-link" href="#">Dream Destinations</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#contact">Contact</a>
+					<a class="nav-link" href="index.html#contact">Contact</a>
 				</li>
 			</ul>
 		</div>
@@ -122,58 +122,6 @@
 </div>
 
 <!--End section dream destination places -->
-
-<!-- CONTACT FORM -->
-<a name="contact"><div class="content-container"></a>
-	<div class="row">
-		<div class="col-sm-4">
-			<h3 class="ctact">Contact</h3>
-			<h5 class="ctact">Zeina Adi</h5>
-			<p class="ctact"> -</p>
-
-				<a href="https://www.instagram.com/zeinaadi_" target="_blank"><i class="fab fa-instagram"></i><p class="ctact">zeinaadi</p></a>
-				
-				<a href="https://www.facebook.com/Zeina.Adi.000" target="_blank"><i class="fab fa-facebook-f"></i><p class="ctact">Zeina Adi</p></a>
-		</div>
-		<div class="col-sm-8">
-		<div class="container">
-		    <form action="action_page.php">
-
-		    <label for="fname"></label>
-		    <input type="text" id="fname" name="name" placeholder="Name">
-		    <br>
-
-		    <label for="email"></label>
-		    <input type="text" id="email" name="email" placeholder="Email">
-		    <br>
-
-		    <label for="country"></label>
-		    <input type="text" id="subject" name="subject" placeholder="Subject">
-		    <br>
-		    
-		    <label for="s"></label>
-		    <textarea id="message" name="message" placeholder="Message" style="height:200px"></textarea>
-		    <br>
-
-		    <input type="submit" value="Submit">
-
-		    </form>
-		</div>
-	</div>
-	</div>
-</div>
-<!-- END CONTACT FORM -->
-
-
-
-
-
-
-
-
-
-
-
 
 
 
