--- a/html/index.html
+++ b/html/index.html
@@ -25,8 +25,9 @@
 </head>
 
 
+
+<body data-spy="scroll" data target="#navbarResponsive"> <!-- data-spy="scroll" data target="#navbarResponsive" This is to keep the header as we keep scrolling --> 
 <div class="background">
-	<body data-spy="scroll" data target="#navbarResponsive"> <!-- data-spy="scroll" data target="#navbarResponsive" This is to keep the header as we keep scrolling --> 
 
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md">  
@@ -152,14 +153,15 @@
 
 <!-- END CONTACT FORM -->
 
-
-
 <!-- Footer -->
 <footer class>
 	<!-- Copyright --> 
 	<div class="footer-copyright text-center py-3"> ©2020 by Zeina Adi. </div>
 
 </footer>
+<!-- END Footer -->
+
+
 
 </body>
 </html>
